# LLMFakeDetector

./: .gitignore  AGENTS.md  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: detection.py
backend/app/core/: config.py
backend/app/modules/detection/: adapter.py  schemas.py  service.py
backend/app/modules/detection/assets/: __init__.py  loader.py
backend/app/modules/detection/assets/vision/: __init__.py
backend/app/modules/detection/probes/: base.py  behavior_probe.py  context_probe.py  error_probe.py  function_calling_probe.py  gateway_signature_probe.py  helpers.py  logprobs_probe.py  parameter_probe.py  registry.py  response_probe.py  token_reference.py  tokenizer_probe.py  vision_probe.py
backend/app/modules/detection/prompts/: __init__.py  behavior_probe.json  context_probe.json  function_calling_probe.json  loader.py  vision_probe.json
docs/: 工程结构设计.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/app/: App.tsx  styles.css
frontend/src/features/detection/: api.ts  mockReport.ts  probeCatalog.ts  types.ts
frontend/src/pages/: DetectorPage.tsx  ReportsPage.tsx
frontend/src/shared/components/: PageShell.tsx
scripts/: dev.sh
tests/backend/: test_adapter.py  test_behavior_probe.py  test_context_probe.py  test_error_probe.py  test_function_calling_probe.py  test_gateway_signature_probe.py  test_probe_helpers.py  test_response_probe.py  test_service.py  test_tokenizer_probe.py  test_vision_probe.py
(+1 files in other folders)
