[project]
name = "llm-fake-detector-backend"
version = "0.1.0"
description = "Backend service for LLM API authenticity detection"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "tiktoken>=0.9.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"app.modules.detection.prompts" = ["*.json"]
"app.modules.detection.assets.vision" = ["*.svg", "*.png"]
